# Ph03nix-InterviewPrep

./: .gitignore  LICENSE  Learnings.md  Learnings2.md  README.md  ToDo.md
Basics/ClassInheritance/: ClassInheritance_AbstractClasses.md  InterfacesAndAbstractionsInJava.md
Basics/Friend/: Friend.md
Basics/Regex/: Regex.cpp  Regex.md  challange.cpp  regex  regex.py
Basics/Static/: Static.md
Chapters/Arrays and Vectors/: ArraysAndVectors.md  Collections.md  CppArrays_and_Vectors.md  JavaArrays.md  KnowledgeBase.md  PythonLists.md
Chapters/DataStructures/: Knowledge.md
Chapters/Java/: 01_JRM_and_Basics.md
Chapters/PrimitiveTypes/: PrimitiveTypes.md
Chapters/PrimitiveTypes/Codings/2_ParityOfNumbers/: CMakeLists.txt  main.cpp
Chapters/PrimitiveTypes/Codings/4_ReversingNumbers/: CMakeLists.txt  main.cpp
Chapters/Sorting/: Knowledge.md
Chapters/Sorting/Code/: SortingAlgorithms.java
Chapters/Strings/: Streams_Java.md  Strings.md
Codings/: 02_BigCountries.sql  Codings.md  JavaCodings.md
Codings/Cpp/: 06_SmallestNotDividing.cpp  07_BlurBox.cpp  08_MineSweeper.cpp  09_VectorReplace.cpp  10_EvenDigits.cpp  11_VariableName.cpp  12_Charshift.cpp  13_chessboard.cpp
Codings/Java/: 01_HammingDistance.java  03_JudgeRouteCircle.java  06_avoidObstacles.java  07_BlurBox.java  08MineSweeper.java  09_ArrayReplace.java  10_EvenDigits.java  11_variableName.java  12_alphabeticShift.java  13_chessboard.java  MergeTwoBinaryTrees.java
Codings/Java/UsualInterviewQuestions/: 14_FizzBuzz.java  15_Fibo.java  16_FiboNth.java  17_factorialWithourRecursion.java  18_ReverseString.java  19_PalindromeTest.java  20_Iterator.java
Codings/ProgrammingKatas/: 11_27_readingFromFileToCoordinates_and_sort.java  12_30_readingAllLinesSortByLength.java
DevOps/: DockerAndKubernetesResourceManagement.md  DockerOreally.md  DockerSuccintly.md  Git.md  Linux.md  edxIntroductionToKubernetes.md
Java/: 01_JRM_and_Basics.md  02_ObjectOrientedProgrammingInJava.md  03_Interfaces_and_LambdaExpressions.md  04_Inheritance_and_Reflection.md  05_Exceptions.md  08_Streams.md  09_IO.md  10_Concurrency.md  ObjectOrientedProgrammingInJava.md
Java/Code for JVM Memory Management/: MemoryManagement.java  ReferenceQueue.java
Java/Hibernate/: Hibernate.md  HighPerformanceJPA.md  apress_BeginningHibernate.md
Java/Hibernate/ExamExercise/: sql_commands.sql
Java/Hibernate/res/: SQLCommandsUsedForDB.sql
Java/InterviewQuestions/115 Java Interview Questions and Answers/: 04_Collectionss.md  05_GC.md  06_ExceptionHandling.md  1_Concepts.md  2_GeneralQuestions.md  3_Threads.md
Java/InterviewQuestions/200PlusUdemy/: JavaInterviewUdemy.md
Java/InterviewQuestions/AlgorithmsAndDataStructures/: AlgorithmsAndDataStructures.md  SolutionTest.java  Solutions.java
Java/InterviewQuestions/CodingBestPractices/: CompetetiveProgramming.java
Java/InterviewQuestions/Design Patterns/: Summary.md
Java/InterviewQuestions/Java8/: Java8InteviewTopics.md
Java/JDBC/: JDBC.java  Readme.txt
Java/JPA/: JPA.md
Java/JUnit/: JUnit.md
Java/Java Memory Management with JVM/: JavaVirtualMachine.md
Java/LifeRay/: LifeRay.md
Java/Main Chapters/: 01_JRM_and_Basics.md  02_ObjectOrientedProgrammingInJava.md  03.5_JavaUtilFunctionPackage.md  03_Interfaces_and_LambdaExpressions.md  04_Inheritance_and_Reflection.md  05_Exceptions.md  06_Generics.md  07.5_Optionals.md  07_Collections.md  08_Streams.md  09_IO.md  10_Concurrency.md
Java/Maven/: Maven.md
Java/OCA/: 03_MethodsAndEncapsulation.md  05_FlowControl.md  06_WorkingWithInheritance.md  07_ExceptionHandling.md  1_JavaBasics.md  2_WorkingWithJavaDataTypes.md  9_NIO.md  Learnings.md
Java/OCP/: 03_Collections.md  08_IO.md  10_JDBC.md  1_AdvancedClassDesign.md  2_DesignPatterns.md  3_Collections.md  4_FunctionalProgramming.md  5_DateLocale.md  6_Exceptions.md  7_Concurrency.md  9_NIO.md  Learnings_Book.md  Learnings_Tests.md
Java/OPA/: 04_JavaAPIUndArrays.md  07_ExceptionHandling.md  2_WorkingWithJavaDataTypes.md  Learnings.md
Java/ProgrammingKatas/: 11_27_readingFromFileToCoordinates_and_sort.java
Java/Spring/: REST_Design.md  ReactiveSpring.md  Spring.md  SpringBoot.md  SpringData.md  SpringDocs.md  SpringRecipes.md  Spring_Udemy.md
Java/Testing/: JUnit.md  Mockito.md  RestAssured.md  SpringTesting.md  TestingRealProjects.md
Java/gRPC/: gRPC.md
Misc/: CleanCode_and_CodingStandard.md  VIM.md
Misc/CMake/: CMake.md
Misc/CMake/Examples/3 - Shared Library Build/: CMakeLists.txt
Misc/CMake/Examples/5 - Using Static or Shared Library/: CMakeLists.txt
Misc/CMake/Examples/6 - Cpp11 Configuration/: CMakeLists.txt
Misc/CMake/Examples/6 - Cpp11 Configuration/src/: Student.cpp  mainapp.cpp
Misc/Cpp11Features/: BasicFeatures.md  Lambdas.md  SmartPointers.md
Misc/TestDrivenDevelopment/: GTest_Advanced.md  GTest_Basics.md  SettingUpTheFrameworks.md  TDD_In_A_Nutshell.md
Misc/TestDrivenDevelopment/Samples/Sample1/: CMakeLists.txt  main.cc  sample1_unittest.cc
Misc/TestDrivenDevelopment/Samples/Sample1/Sample1Class/: sample1.cc  sample1.h
Misc/TestDrivenDevelopment/Samples/Sample1/UnitTests/: sample1_unittest.cc
Misc/TestDrivenDevelopment/Samples/Sample1/ext/gtest/: CMakeLists.txt
Misc/TestDrivenDevelopment/Samples/Sample2/: CMakeLists.txt  sample2_unittest.cc
Misc/TestDrivenDevelopment/Samples/Sample3/: CMakeLists.txt  sample3-inl.h  sample3_unittest.cc
Photo/: FsStoppersIceland.md
Web/Apache TomCat/: TomCat.md
Web/Bootstrap/: Bootstrap.md
Web/CSS/: CSS.md  Sass-Css.md
Web/Crawling/: Spacy.md
Web/Django/: DjangoTutorial.md
Web/Docker/: Docker.md
Web/Flask/: Flask.md
Web/HTTP/: HTTP.md
Web/JavaScript/: JS.md  Promises.md  PromisesAsincAwait.md
Web/MongoDB/: MongoDefinitiveGuide.md  MongoSecurity.md  mongo.md
Web/NodeJS/: ExceptionHandling.md  NodeSuccinctly.md
Web/RESTFUL Java/: RestfulJava.md
Web/ReactJS/: React.md  ReactNative.md
Web/Redux/: Redux.md
Web/SOAP/: SOAP.md
Web/SQL/: MySQL Schema Design.md  Postgresql.md  SQL.md
Web/Spring/: ProductionValidationChain.md  Spring.md  SpringTesting.md
Web/XML/: XML.md
(+43 files in other folders)
